--- a/views/Proveedores.ejs
+++ b/views/Proveedores.ejs
@@ -240,7 +240,7 @@
                     <td>
                       <!-- Botones de acciones -->
                       <a
-                        href="/EditClient/<%= prov.Id_Proveedor %>"
+                        href="/EditProveedor/<%= prov.Id_Proveedor %>"
                         class="btn btn-success mb-1"
                         title="Actualizar"
                         ><svg
