--- a/views/ventas.ejs
+++ b/views/ventas.ejs
@@ -387,7 +387,7 @@
               <div class="py-1 px-3 mb-2" style="display: flex; align-items: center; justify-content: space-between;">
                 <h4 style="color: black; font-size: 22px">Listado de Ventas</h4>
                 <div style="display: flex; align-items: center">
-                  <select onchange="Filtrar()" id="filtroTipoVenta"  class="form-select" aria-label="Default select example" style="background-color: rgb(128, 192, 128); color: white; width: 180px; padding: 6px;">
+                  <select onchange="Filtrar()" id="filtroTipoVenta"  class="form-select" aria-label="Default select example" style="background-color: rgb(128, 192, 128); color: white;">
                     <option selected>Filtrar tipo de venta</option>
                     <option value="Contado">Ventas al contado</option>
                     <option value="Credito">Ventas al crédito</option>
