--- a/views/vendedores.ejs
+++ b/views/vendedores.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vendedores Comercial Jennifer</title>
+    <title>Colaboradores Comercial Jennifer</title>
     <!-- FA pencil-->
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <!-- Bootstrao-->
@@ -24,53 +24,50 @@
   <body>
     <%- include('sidebar.ejs') %> 
     <section class="home-section">
+      <!-- Registro Colaboradores -->
       <div class="Container">
+        
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-          <div
-            id="panelRegistroVendedor"
-            class="panel-flotante panel-ancho"
-            style="display: none"
-          >
+          <div id="panelRegistroVendedor" class="panel-flotante panel-ancho" style="display: none">
             <div class="panel-content">
-              <h2 class="fw-bold">Registrar un nuevo vendedor</h2>
+              <h2 class="fw-bold">Registrar un nuevo colaborador</h2>
         
               <div style="max-height: 300px; overflow-y: auto">
                 <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
                   
         
-                  <form action="/AddVendedor" method="post" class="needs-validation"novalidate>
+                  <form action="/AddColaborador" method="post" class="needs-validation"novalidate>
                     
                     <!-- Usuario -->
                     <div class="mb-2">
-                      <label id="uservd_lb" for="uservd" class="form-label" style="display: none;">Usuario del Vendedor</label>
+                      <label id="uservd_lb" for="uservd" class="form-label fw-bold" style="display: none;">Usuario del Colaborador</label>
                       <input id="uservd" name="uservd" class="form-control" placeholder="Nombre de Usuario" style="display: none;">
                     </div>
 
                     <!-- Nombres -->
                     <div class="mb-2">
-                      <label for="nombre" class="form-label">Nombres</label>
-                      <input type="text" class="form-control" id="Tipo" name="Tipo_vd" placeholder="Tipo" value="Vendedor" hidden/>
+                      <label for="nombre" class="form-label fw-bold">Nombres del Colaborador</label>
                       <input type="text" class="form-control" id="Nombre_vd" name="Nombre_vd" placeholder="Nombres" onchange="crearUsuario()"required />
-                      <div class="invalid-feedback">Por favor Ingrese el nombre del Vendedor</div>
-                    </di  v>
+                      <div class="invalid-feedback">Por favor Ingrese el nombre del Colaborador</div>
+                    </div>
 
                     <!-- Apellidos -->
                     <div class="mb-2">
-                      <label for="apellido" class="form-label">Apellidos</label>
+                      <label for="apellido" class="form-label fw-bold">Apellidos del Colaborador</label>
                       <input type="text" class="form-control" id="Apellido_vd" name="Apellido_vd" placeholder="Apellidos" onchange="crearUsuario()" required />
-                      <div class="invalid-feedback">Por favor Ingrese el apellido del Vendedor</div>
+                      <div class="invalid-feedback">Por favor Ingrese el apellido del Colaborador</div>
                     </div>
 
                     <!-- Telefono -->
                     <div class="mb-2">
-                      <label for="Telefono" class="form-label">Telefono</label>
-                      <input type="number" class="form-control" id="Telefono" name="Telefono_vd" placeholder="Telefono" required />
-                      <div class="invalid-feedback">Por favor Ingrese el telefono del Vendedor</div>
+                      <label for="Telefono" class="form-label fw-bold">Telefono del Colaborador</label>
+                      <input type="number" class="form-control" id="Telefono" name="Telefono_vd" placeholder="Telefono" required maxlength="8"/>
+                      <div class="invalid-feedback">Por favor Ingrese el telefono del Colaborador</div>
                     </div>
 
                     <!-- Cedula -->
                     <div class="mb-2">
-                      <label for="Cedula" class="form-label">Cedula</label>
+                      <label for="Cedula" class="form-label fw-bold">Cedula del Colaborador</label>
                       <input
                         type="text"
                         class="form-control"
@@ -79,37 +76,56 @@
                         placeholder="Cedula"
                         required
                         onchange="crearUsuario()"/>
-                      <div class="invalid-feedback">Por favor Ingrese la Cedula del Vendedor</div>
+                      <div class="invalid-feedback">Por favor Ingrese la Cedula del Colaborador</div>
+                    </div>
+
+                    <!-- Cargo Colaborador -->
+                    <div class="mb-1 position-relative">
+                      <label for="Distrito_cl" class="form-label fw-bold" >Cargo del Colaborador</label>
+                      <select
+                        id="selectCargoC"
+                        class="form-select mb-2"
+                        aria-label="selectCargoC"
+                        name="selectCargoC"
+                        required
+                      >
+                        <option selected disabled value="">Seleccionar el Cargo...</option>
+                        <option value="Vendedor">Vendedor</option>
+                        <option value="Gerente">Gerente</option>
+                        <option value="Sub-Gerente">Sub-Gerente</option>
+                        <option value="Supervisor">Supervisor</option>
+                      </select>
+                      <div class="invalid-feedback">Por favor ingrese el Cargo</div>
                     </div>
 
                     <!-- Direccion y Distrito -->
                     <div class="mb-1 position-relative">
-                      <h5 class="my-3 fw-bold">Dirección del Cliente</h5> 
-                      <label for="Distrito_cl" class="form-label" >Dirección</label>
+                      <h5 class="my-3 fw-bold">Dirección del Colaborador</h5> 
+                      <label for="Distrito_cl" class="form-label fw-bold" >Distrito</label>
                       <select
                         id="selectDistritoVd"
-                        class="form-select"
+                        class="form-select mb-2"
                         aria-label="Distrito"
                         name="Distrito_vd"
                         required
                       >
                         <option selected disabled value="">
-                          Seleccionar Distrito...
+                          Seleccionar el Distrito...
                         </option>
-                        <option value="I">I</option>
-                        <option value="II">II</option>
-                        <option value="III">III</option>
-                        <option value="IV">IV</option>
-                        <option value="V">V</option>
-                        <option value="VI">VI</option>
-                        <option value="VII">VII</option>
+                        <option value="I">Distrito I</option>
+                        <option value="II">Distrito II</option>
+                        <option value="III">Distrito III</option>
+                        <option value="IV">Distrito IV</option>
+                        <option value="V">Distrito V</option>
+                        <option value="VI">Distrito VI</option>
+                        <option value="VII">DistritoVII</option>
                       </select>
                       <div class="invalid-feedback">Por favor ingrese el Distrito</div>
                     </div>
                     
                     <!-- Residencia -->
                     <div class="mb-2 dx-2">
-                      <label for="Residencia" class="form-label">Zona de Residencia</label>
+                      <label for="Residencia" class="form-label fw-bold">Zona de Residencia</label>
                       <input
                         type="text"
                         class="form-control"
@@ -123,7 +139,7 @@
 
                     <!-- Punto referencia -->
                     <div class="mb-2">
-                      <label for="PuntoReferencia" class="form-label"
+                      <label for="PuntoReferencia" class="form-label fw-bold"
                         >Punto de Referencia</label
                       >
                       <input
@@ -140,7 +156,7 @@
 
                     <!-- Distancia -->
                     <div class="mb-2">
-                      <label for="Distancia" class="form-label">Distancia</label>
+                      <label for="Distancia" class="form-label fw-bold">Distancia</label>
                       <input
                         type="text"
                         class="form-control"
@@ -152,7 +168,7 @@
 
                     <!-- Casa -->
                     <div class="mb-2">
-                      <label for="casa" class="form-label">Informacion de casa</label>
+                      <label for="casa" class="form-label fw-bold">Información de la casa</label>
                       <input
                         type="text"
                         class="form-control"
@@ -176,6 +192,7 @@
                       >
                     </div>
                   </form>
+
                 </div>
                 <div class="py-3">
                   <button
@@ -191,52 +208,45 @@
           </div>
         </div>
       </div>
+
       <div class="Container px-3 py-1 contenedorventas">
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12"></div>
-        <h4>Listado y Registro de los Vendedores</h4>
+        <h4>Listado y Registro de los Colaboradores</h4>
       </div>
+
       <div class="Container px-3">
         <div class="row">
           
           <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
             <div class="px-3 py-2">
               <h4 style="display: flex; justify-content: space-between">
-                Listado de Vendedores
+                Listado de Colaboradores
                 <button
                   type="button"
                   class="btn btn-success"
                   title="Historial"
                   onclick="mostrarPanelRegistroVendedor()"
                 >
-                  <i class="fa-solid fa-user-plus mx-1"></i></i>Registrar un nuevo vendedor
+                  <i class="fa-solid fa-user-plus mx-2"></i></i>Registrar un nuevo colaborador
                 </button>
               </h4>
             </div>
-            
-
-            <!-- <nav class="navbar bg-body-tertiary">
-              <div class="container-fluid">
-                <a class="navbar-brand">Buscar vendedor</a>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Buscar</button>
-                </form>
-              </div>
-            </nav> -->
             <table class="table primary hover" id="TableVendedor">
                 <thead>
                   <tr>
+                    <th class="centrado">Cargo del Colaborador</th>
                     <th class="centrado">Nombre completo</th>
                     <th class="centrado">Cedula</th>
                     <th class="centrado">Telefono</th>
                     <th class="centrado">Dirección</th>
-                    <th class="centrado">Estado Vendedor</th>
+                    <th class="centrado">Estado</th>
                     <th class="centrado"></th>
                   </tr>
                 </thead>
                 <tbody>
                   <% vendedores.forEach((vendedor) => { %>
                     <tr>
+                      <td class="centrado"> <%= vendedor.Tipo_Persona %></td>
                       <td class="centrado"> <%= vendedor.Nombre %></td>
                       <td class="centrado"><%= vendedor.Cedula %></td>
                       <td class="centrado"><%= vendedor.Telefono %></td>
@@ -244,7 +254,7 @@
                       <td class="centrado"><%= vendedor.Estado %></td>
                       <td>
                         <!-- Botones de acciones -->
-                        <a href="/EditVendedor/<%= vendedor.Id_Vendedor %>" class="btn btn-success mb-1" title="Actualizar"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                        <a href="/EditColaborador/<%= vendedor.Id_Vendedor %>" class="btn btn-success mb-1" title="Actualizar"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
                           <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
                           <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
                         </svg> </a> 
@@ -254,11 +264,7 @@
                         </svg> </a> -->
                     </td>
                     </tr>
-
                   <% }) %> 
-
-                  
-                  
                 </tbody>
             </table>
           </div>
@@ -321,20 +327,23 @@
   <script>
     $(document).ready(function(){
         $('#TableVendedor').DataTable({
-            info: false,
-            ordering: false,
-            paging: false,
-            "oLanguage": {
-                "sSearch": "Buscar a un vendedor:"
-            },
-            "rowCallback": function( row, data ) {
-                if (data[3] === "activo") { // Suponiendo que el estado está en la cuarta columna (índice 3)
-                    $(row).css('background-color', 'green');
-                } else if (data[3] === "inactivo") {
-                    $(row).css('background-color', 'red');
-                }
+          info: false,
+          ordering: false,
+          lengthMenu: [5,10,15,20,25,50],
+          "oLanguage": {
+            "sSearch": "Buscar a un Colaborador:",
+            "sZeroRecords": "No se encontraron resultados",
+            "sLengthMenu": "Mostrar _MENU_ Colaboradores",
+            "sZeroRecords": "No se encontraron resultados",
+            "sLoadingRecords": "Cargando...",
+            "oPaginate": {
+                "sFirst": "Primero",
+                "sLast": "Último",
+                "sNext": "Siguiente",
+                "sPrevious": "Anterior"}
             }
-        });
+        })
+        ;
     });
   </script>
 
