Commit Detalles Inicio

--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -40,6 +40,7 @@
             <div class="card rounded-0">
               <div class="card-body">
                 <div class="row">
+
                   <div class="col-lg-3 col-md-6 d-flex stat my-3">
                     <div class="mx-auto">
                       <h6 class="text-muted">Ingresos del Mes</h6>
@@ -49,6 +50,7 @@
                       </h6>
                     </div>
                   </div>
+
                   <div class="col-lg-3 col-md-6 d-flex stat my-3">
                     <div class="mx-auto">
                       <h6 class="text-muted">Productos activos</h6>
@@ -58,6 +60,7 @@
                       </h6>
                     </div>
                   </div>
+
                   <div class="col-lg-3 col-md-6 d-flex stat my-3">
                     <div class="mx-auto">
                       <h6 class="text-muted">No. Clientes Activos</h6>
@@ -67,15 +70,17 @@
                       </h6>
                     </div>
                   </div>
+
                   <div class="col-lg-3 col-md-6 d-flex my-3">
                     <div class="mx-auto">
-                      <h6 class="text-muted">Clientes nuevos</h6>
-                      <h3 class="font-weight-bold">28</h3>
+                      <h6 class="text-muted">Egresos del Mes</h6>
+                      <h3 class="font-weight-bold">C$ <%= Egresos %></h3>
                       <h6 class="text-success">
                         <i class="icon ion-md-arrow-dropup-circle"></i> 15.50%
                       </h6>
                     </div>
                   </div>
+
                 </div>
               </div>
             </div>
@@ -85,6 +90,7 @@
         <section>
           <div class="container">
             <div class="row">
+
               <div class="col-lg-6 my-3">
                 <div class="card rounded-0">
                   <div class="card-header bg-light">
@@ -107,6 +113,21 @@
                   </div>
                   <div class="card-body">
                     <canvas id="myChart2" width="300" height="150"></canvas>
+                  </div>
+                </div>
+              </div>
+
+              
+
+              <div class="col-lg-6 my-3">
+                <div class="card rounded-0">
+                  <div class="card-header bg-light">
+                    <h6 class="font-weight-bold mb-0">
+                      Vendedores con mas Ventas en el Mes
+                    </h6>
+                  </div>
+                  <div class="card-body">
+                    <canvas id="myChart3" width="300" height="150"></canvas>
                   </div>
                 </div>
               </div>
@@ -195,16 +216,8 @@
     </section>
 
     <script src="script.js"></script>
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"crossorigin="anonymous"></script>
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
@@ -280,6 +293,44 @@
         },
       });
     </script>
+
+    <script>
+      var valores = JSON.parse("<%- JSON.stringify(Vendedores.map(vendedor => vendedor.Total_Vendido)) %>");
+      var labels = <%- JSON.stringify(Vendedores.map(vendedor => vendedor.Nombre)) %>; 
+
+      var ctx = document.getElementById("myChart3").getContext("2d");
+      var myChart = new Chart(ctx, {
+        type: "bar",
+        data: {
+          labels: labels,
+          datasets: [
+            {
+              label: "Vendedor con mas ventas en este mes",
+              data: valores,
+              backgroundColor: ["#111B54", "#12C9E5", "#12C9E5", "#12C9E5"],
+              maxBarThickness: 30,
+              maxBarLength: 2,
+            },
+          ],
+        },
+        options: {
+          scales: {
+            yAxes: [
+              {
+                ticks: {
+                  beginAtZero: true,
+                },
+              },
+            ],
+          },
+        },
+      });
+    </script>
+
+
+    
+
+
 
     <script>
       function SeeALL()
