--- a/views/showProducts.ejs
+++ b/views/showProducts.ejs
@@ -42,10 +42,9 @@
   
                 <% if ( Categoria == 'Calzado') { %>
                 <option value="1" selected>Calzado</option>
-                
                 <% } else { %>
                 <option value="1">Calzado</option>
-                <% } %> <% if ( Categoria == 'Prendas_Vestir') { %>
+                <% } %> <% if ( Categoria == 'Prendas_Vestir' || Categoria == 'Prendas de Vestir') { %>
                 <option value="2" selected>Prendas de Vestir</option>
                 <% } else { %>
                 <option value="2">Prendas de Vestir</option>
