Commit Fix Details

--- a/views/editVendedor.ejs
+++ b/views/editVendedor.ejs
@@ -22,7 +22,7 @@
         <div class="row">
           <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
             <h2>Datos del Colaborador</h2>
-            <form action="/UpdateColaborador" method="post" class="needs-validation" novalidate>
+            <form action="/UpdateColaborador" method="post" class="needs-validation" autocomplete="off" novalidate>
 
                 <div class="mb-2">
                   <label for="nombre" class="form-label">Nombres</label>
