--- a/views/editClient.ejs
+++ b/views/editClient.ejs
@@ -22,7 +22,7 @@
         <div class="row">
           <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
                   <h3>Datos del <%= tipo %></h3>
-                    <form action="/UpdateClient" method="post" class="needs-validation" novalidate>
+                    <form action="/UpdateClient" method="post" class="needs-validation" novalidate autocomplete="off">
                         <!-- Nombres -->
                         <div class="mt-3 mb-2">
                           <label for="Nombre" class="form-label fw-bold">Nombres del Cliente</label>
@@ -53,12 +53,16 @@
                           <div class="invalid-feedback">Por favor ingrese el número de cédula del cliente</div>
                         </div>
 
-                        <!-- Comercio -->
-                        <div class="mb-2">
-                          <label for="Cedula" class="form-label  fw-bold">Comercio</label>
-                          <input type="text" class="form-control" id="Cedula" name="Cedula_cl" placeholder="Cédula del cliente" value="<%= cliente.Cedula %>"  required/>
-                          <div class="invalid-feedback">Por favor ingrese el número de cédula del cliente</div>
-                        </div>
+                        <% if(tipo == 'Proveedor'){ %>
+                            <!-- Comercio -->
+                          <div class="mb-2">
+                            <label for="Comercio" class="form-label  fw-bold">Comercio</label>
+                            <input type="text" class="form-control" id="Comercio" name="Comercio_pv" placeholder="Cédula del cliente" value="<%= cliente.Comercio %>"  required/>
+                            <div class="invalid-feedback">Por favor ingrese el Comercio del Proveedor</div>
+                          </div>
+                        <% } %>
+
+
 
                         <!-- Direccion -->
                         <div class="mb-1 position-relative">
