--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -23,10 +23,10 @@
       <nav class="navbar navbar-expand navbar-light width topbar mb-4 static-top shadow">
         
 
-        <!-- Topbar Navbar -->
+        <!--
         <ul class="navbar-nav ml-auto">
 
-            <!-- Nav Item - Search Dropdown (Visible Only XS) -->
+            <!-- Nav Item - Search Dropdown (Visible Only XS) 
             <li class="nav-item dropdown no-arrow d-sm-none">
                 <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -34,14 +34,14 @@
                 </a>
             </li>
 
-            <!--Alertas-->
+            <!--Alertas
             <li class="nav-item dropdown no-arrow mx-1">
                 <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="fas fa-bell fa-fw"></i>
                     <span class="badge badge-danger badge-counter">3+</span>
                 </a>
-                <!--SubMenu alertas -->
+                <!--SubMenu alertas
                 <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
                     aria-labelledby="alertsDropdown">
                     <h6 class="dropdown-header">
@@ -87,7 +87,7 @@
             
             <div class="topbar-divider d-none d-sm-block"></div>
 
-            <!-- Navbar - informacion de usuario -->
+            <!-- Navbar - informacion de usuario 
             <li class="nav-item dropdown no-arrow">
                 <a class="nav-link dropdown-toggle width" href="#" id="userDropdown" role="button"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -95,7 +95,7 @@
                     <img class="img-profile rounded-circle"
                         src="img/undraw_profile.svg">
                 </a>
-                <!-- SubMenu Informacion -->
+                <!-- SubMenu Informacion 
                 <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                     aria-labelledby="userDropdown">
                     <a class="dropdown-item" href="#">
@@ -119,7 +119,7 @@
             </li>
 
         </ul>
-
+          -->
       </nav>
       <div id="content" class="bg-grey w-100">
         <section class="bg-light py-3">
@@ -190,185 +190,18 @@
           </div>
         </section>
 
-        <section class="bg-mix py-3">
-          <div class="container">
-            <div class="">
-                <div class="row">
-
-                  <!-- Earnings (Monthly) Card Example -->
-                  <div class="col-xl-3 col-md-6 mb-4">
-                      <div class="card border-left-primary shadow h-100 py-2">
-                          <div class="card-body">
-                              <div class="row no-gutters align-items-center">
-                                  <div class="col mr-2">
-                                      <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                          Ventas al contado</div>
-                                      <div class="h5 mb-0 font-weight-bold text-gray-800">$40,000</div>
-                                  </div>
-                                  <div class="col-auto">
-                                      <i class="fas fa-calendar fa-2x text-gray-300"></i>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-      
-                  <!-- Earnings (Monthly) Card Example -->
-                  <div class="col-xl-3 col-md-6 mb-4">
-                      <div class="card border-left-success shadow h-100 py-2">
-                          <div class="card-body">
-                              <div class="row no-gutters align-items-center">
-                                  <div class="col mr-2">
-                                      <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                          Ventas al credito</div>
-                                      <div class="h5 mb-0 font-weight-bold text-gray-800">$215,000</div>
-                                  </div>
-                                  <div class="col-auto">
-                                      <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-      
-                  <!-- Earnings (Monthly) Card Example -->
-                  <div class="col-xl-3 col-md-6 mb-4">
-                      <div class="card border-left-info shadow h-100 py-2">
-                          <div class="card-body">
-                              <div class="row no-gutters align-items-center">
-                                  <div class="col mr-2">
-                                      <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Recuperacion de credito
-                                      </div>
-                                      <div class="row no-gutters align-items-center">
-                                          <div class="col-auto">
-                                              <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800 px-3">50%</div>
-                                          </div>
-                                          <div class="col">
-                                              <div class="progress progress-sm mr-2">
-                                                  <div class="progress-bar bg-info" role="progressbar"
-                                                      style="width: 50%" aria-valuenow="50" aria-valuemin="0"
-                                                      aria-valuemax="100"></div>
-                                              </div>
-                                          </div>
-                                      </div>
-                                  </div>
-                                  <div class="col-auto">
-                                      <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-      
-                  <!-- Pending Requests Card Example -->
-                  <div class="col-xl-3 col-md-6 mb-4">
-                      <div class="card border-left-warning shadow h-100 py-2">
-                          <div class="card-body">
-                              <div class="row no-gutters align-items-center">
-                                  <div class="col mr-2">
-                                      <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                                          Deudas pendientes</div>
-                                      <div class="h5 mb-0 font-weight-bold text-gray-800">18</div>
-                                  </div>
-                                  <div class="col-auto">
-                                      <i class="fas fa-comments fa-2x text-gray-300"></i>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-            </div>
-          </div>
-        </section>
-
-        <section class="container">
-          <div class="">
-            <div class="row">
-
-              <!-- Area Chart -->
-              <div class="col-xl-8 col-lg-12">
-                  <div class="card shadow mb-4">
-                      <!-- Dropdown -->
-                      <div
-                          class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                          <h6 class="m-0 font-weight-bold text-primary">Resumen de ganancias</h6>
-                          <div class="dropdown no-arrow">
-                              <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                  <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                              </a>
-                              <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                                  aria-labelledby="dropdownMenuLink">
-                                  <div class="dropdown-header">Dropdown Header:</div>
-                                  <a class="dropdown-item" href="#">Ir a historial de ventas</a>
-                                  <div class="dropdown-divider"></div>
-                              </div>
-                          </div>
-                      </div>
-                      <!-- Card Body -->
-                      <div class="card-body" style="height: 260px;">
-                          <div class="chart-area">
-                              <canvas id="myAreaChart"></canvas>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-  
-              <!-- Pie Chart -->
-              <div class="col-xl-4 col-lg-5">
-                  <div class="card shadow mb-4">
-                      <!-- Card Header - Dropdown -->
-                      <div
-                          class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                          <h6 class="m-0 font-weight-bold text-primary">Compras a proovedores</h6>
-                          <div class="dropdown no-arrow">
-                              <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                  <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                              </a>
-                              <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                                  aria-labelledby="dropdownMenuLink">
-                                  <div class="dropdown-header">Dropdown Header:</div>
-                                  <a class="dropdown-item" href="#">Ir a historial de compras</a>
-                              </div>
-                          </div>
-                      </div>
-                      <!-- Card Body -->
-                      <div class="card-body">
-                          <div class="chart-pie pt-4 pb-2">
-                              <canvas id="myPieChart"></canvas>
-                          </div>
-                          <div class="mt-4 text-center small">
-                              <span class="mr-2">
-                                  <i class="fas fa-circle text-primary"></i> Masesa
-                              </span>
-                              <span class="mr-2">
-                                  <i class="fas fa-circle text-success"></i> Tropicon
-                              </span>
-                              <span class="mr-2">
-                                  <i class="fas fa-circle text-info"></i> Pali
-                              </span>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-            </div>
-          </div>
-        </section>
-
         <section>
           <div class="container">
             <div class="row">
 
               <div class="col-lg-6 my-3">
                 <div class="card rounded-3 border-0 shadow-lg">
-                    <div class="card-header" style="background: linear-gradient(45deg, #ff6f61, #ffb6c1); border-top-left-radius: .3rem; border-top-right-radius: .3rem;">
-                        <h6 class="font-weight-bold mb-0 text-white text-center">
+                    <div class="card-header" style=" border-top-left-radius: .3rem; border-top-right-radius: .3rem;">
+                        <h6 class="font-weight-bold mb-0 text-center" style="color: black;">
                             Cantidad de ventas al Contado Mensuales
                         </h6>
                     </div>
-                    <div class="card-body" style="background: #fff3e0; border-bottom-left-radius: .3rem; border-bottom-right-radius: .3rem;">
+                    <div class="card-body" style="border-bottom-left-radius: .3rem; border-bottom-right-radius: .3rem;">
                         <canvas id="myChart" width="300" height="150"></canvas>
                     </div>
                 </div>
@@ -378,83 +211,29 @@
               
               <div class="col-lg-6 my-3">
                 <div class="card rounded-3 border-0 shadow-lg">
-                    <div class="card-header" style="background: linear-gradient(45deg, #6a5acd, #b0c4de); border-top-left-radius: .3rem; border-top-right-radius: .3rem;">
-                        <h6 class="font-weight-bold mb-0 text-white text-center">
+                    <div class="card-header" style="border-top-left-radius: .3rem; border-top-right-radius: .3rem;">
+                        <h6 class="font-weight-bold mb-0 text-center" style="color: black;">
                             Cantidad de ventas al Crédito Mensuales
                         </h6>
                     </div>
-                    <div class="card-body" style="background: #e0f7fa; border-bottom-left-radius: .3rem; border-bottom-right-radius: .3rem;">
+                    <div class="card-body" style="border-bottom-left-radius: .3rem; border-bottom-right-radius: .3rem;">
                         <canvas id="myChart2" width="300" height="150"></canvas>
                     </div>
                 </div>
               </div>
             
-            
-
-              <section>
-                <div class="container">
-                  <div class="col-lg-12 my-3">
-                    <div class="row">
-                      <div class="col-lg-6 mb-4">
-
-                          <!-- Project Card Example -->
-                          <div class="card shadow mb-4">
-                              <div class="card-header py-3">
-                                  <h6 class="m-0 font-weight-bold text-primary">Categoria de productos</h6>
-                              </div>
-                              <div class="card-body">
-                                  <h4 class="small font-weight-bold">Calzado<span
-                                          class="float-right">20%</span></h4>
-                                  <div class="progress mb-4">
-                                      <div class="progress-bar bg-danger" role="progressbar" style="width: 20%"
-                                          aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-                                  </div>
-                                  <h4 class="small font-weight-bold">Cosmeticos <span
-                                          class="float-right">40%</span></h4>
-                                  <div class="progress mb-4">
-                                      <div class="progress-bar bg-warning" role="progressbar" style="width: 40%"
-                                          aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
-                                  </div>
-                                  <h4 class="small font-weight-bold">Ropa de vestir <span
-                                          class="float-right">60%</span></h4>
-                                  <div class="progress mb-4">
-                                      <div class="progress-bar" role="progressbar" style="width: 60%"
-                                          aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                                  </div>
-                                  <h4 class="small font-weight-bold">Productos Platicos <span
-                                          class="float-right">80%</span></h4>
-                                  <div class="progress mb-4">
-                                      <div class="progress-bar bg-info" role="progressbar" style="width: 80%"
-                                          aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                                  </div>
-                                  <h4 class="small font-weight-bold">Electrodomesticos <span
-                                          class="float-right">Complete!</span></h4>
-                                  <div class="progress">
-                                      <div class="progress-bar bg-success" role="progressbar" style="width: 100%"
-                                          aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col-lg-6 my-3">
-                        <div class="card rounded-3 border-0 shadow-lg">
-                            <div class="card-header" style="background: linear-gradient(45deg, #ff6f61, #ffb6c1); border-top-left-radius: .3rem; border-top-right-radius: .3rem;">
-                                <h6 class="font-weight-bold mb-0 text-white text-center">
-                                    Vendedores con más Ventas en el Mes
-                                </h6>
-                            </div>
-                            <div class="card-body" style="background: #fff3e0; border-bottom-left-radius: .3rem; border-bottom-right-radius: .3rem;">
-                                <canvas id="myChart3" width="300" height="185"></canvas>
-                            </div>
-                        </div>
-                      </div>
-                    
+              <div class="col-lg-6 my-3">
+                <div class="card rounded-3 border-0 shadow-lg">
+                    <div class="card-header">
+                        <h6 class="font-weight-bold mb-0  text-center" style="color: black;">
+                            Vendedores con más Ventas en el Mes
+                        </h6>
                     </div>
-                  </div>
+                    <div class="card-body" style="border-bottom-left-radius: .3rem; border-bottom-right-radius: .3rem;">
+                        <canvas id="myChart3" width="300" height="185"></canvas>
+                    </div>
                 </div>
-              </section>
-
-              
+              </div>
 
               <!-- <div class="col-lg-6 my-3">
                 <div class="card rounded-0">
@@ -469,7 +248,7 @@
                 </div>
               </div> -->
 
-              <div class="col-lg-12 my-3">
+              <div class="col-lg-6 my-3">
                 <div class="card rounded-0">
                   <div class="card-header bg-light">
                     <h6 class="font-weight-bold mb-0">Ventas recientes</h6>
