facuta compra y validacion input

--- a/views/Compras.ejs
+++ b/views/Compras.ejs
@@ -497,6 +497,15 @@
                 <div style="max-height: 300px; overflow-y: auto">
                   <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
 
+                    <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                      <div style="max-height: 300px; overflow-y: auto">
+                      <button
+                      type="button"
+                      class="btn btn-outline-primary  mt-2 mb-4"
+                      onclick="genPDF()">
+                      Generar Pdf <i class="fas fa-file-pdf mx-1"></i>
+                    </button>
+
                     <table class="table" id="tablaDetalleCompra">
 
                       <thead>
@@ -641,6 +650,8 @@
     <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.5.1.js" ></script>
     <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js" ></script>
     <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap5.min.js" ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.20/jspdf.plugin.autotable.min.js"></script>
 
     <!--  <% if (typeof alert != "undefined") { %>
       <script>
