validacion cedula y telefono

--- a/views/Compras.ejs
+++ b/views/Compras.ejs
@@ -480,7 +480,7 @@
                         <td class="centrado"><%= C.Fecha_Compra %></td>
                         <td class="centrado">C$ <%= C.Total_Compra %></td>
                         <td class="centrado">
-                          <button type="button" class="btn btn-success info-venta" title="Informacion de la venta" onclick="mostrarDetallesCompra('<%= C.Id_Compra %>','<%= C.Proveedor %>','<%= C.Comprador %>','<%= C.Fecha_Compra %>','<%= C.Total_Compra %>')"> <i class="fa-solid fa-money-check-dollar"></i> </button>
+                          <button type="button" class="btn btn-success info-venta" title="Informacion de la venta" onclick="mostrarDetallesCompra('<%= C.Id_Compra %>','<%= C.Proveedor %>','<%= C.Comprador %>','<%= C.Fecha_Compra %>','<%= C.Total_Compra %>','<%= C.Comercio %>')"> <i class="fa-solid fa-money-check-dollar"></i> </button>
                         </td>
                       </tr>
                       <% }); %>
