--- a/views/editClient.ejs
+++ b/views/editClient.ejs
@@ -43,7 +43,7 @@
                         <div class="mb-2">
                           <label for="Telefono" class="form-label fw-bold">Teléfono  del cliente</label>
                           <input type="number" class="form-control" id="Telefono" name="Telefono_cl" placeholder="Teléfono del cliente" value="<%= cliente.Telefono %>" required/>
-                          <div class="invalid-feedback">Por favor ingrese el numero de teléfono del Cliente</div>
+                          <div class="invalid-feedback">Por favor ingrese el numero de teléfono de 8 dígitos</div>
                         </div>
 
                         <!-- Cedula -->
