--- a/views/vendedores.ejs
+++ b/views/vendedores.ejs
@@ -62,7 +62,7 @@
                     <div class="mb-2">
                       <label for="Telefono" class="form-label fw-bold">Telefono del Colaborador</label>
                       <input type="number" class="form-control" id="Telefono" name="Telefono_vd" placeholder="Telefono" required maxlength="8"/>
-                      <div class="invalid-feedback">Por favor Ingrese el telefono del Colaborador</div>
+                      <div class="invalid-feedback">Por favor ingrese el número de teléfono de 8 dígitos</div>
                     </div>
 
                     <!-- Cedula -->
@@ -76,7 +76,7 @@
                         placeholder="Cedula"
                         required
                         onchange="crearUsuario()"/>
-                      <div class="invalid-feedback">Por favor Ingrese la Cedula del Colaborador</div>
+                      <div class="invalid-feedback">Por favor ingrese la cédula con el formato XXX-XXXXXX-XXXXY</div>
                     </div>
 
                     <!-- Cargo Colaborador -->
