--- a/views/Compras.ejs
+++ b/views/Compras.ejs
@@ -190,6 +190,7 @@
                   <h4>Seleccione los productos</h4>
                   <div style="max-height: 350px; overflow-y: auto">
                     <div class="row">
+                      <div class="col-sm-12 col-md-1 col-lg-1 col-xl-1"></div>
                       <div class="col-sm-12 col-md-10 col-lg-10 col-xl-10">
                         <div class="mb-3">
                           <label for="text" class="form-label" >Seleccione la categoria del producto a añadir</label>
@@ -204,9 +205,10 @@
                         </select>
                         </div>
                       </div>
-                      
+                      <div class="col-sm-12 col-md-1 col-lg-1 col-xl-1"></div>
 
-                      <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8">
+                      <div class="col-sm-12 col-md-1 col-lg-1 col-xl-1"></div>
+                      <div class="col-sm-12 col-md-10 col-lg-10 col-xl-10">
 
                         <div id="tablaCalzado" style="display: none">
                           <table class="table primary" id="TableCalzadoCompras">
@@ -433,16 +435,16 @@
                         </div>
                         
                       </div>
-                      
+                      <div class="col-sm-12 col-md-1 col-lg-1 col-xl-1"></div>
                     </div>
                   </div>
 
                   <button
                     type="button"
-                    class="btn btn-danger"
+                    class="btn btn-danger px-2 py-2"
                     onclick="CerrarPanelProductoCompra()"
                   >
-                    Cancelar
+                    Cerrar
                   </button>
                 </div>
               </div>
@@ -495,74 +497,80 @@
                 <h4 class="fw-bold my-2" id="DetalleCompraTitle">Detalle Compra</h4>
 
                 <div style="max-height: 300px; overflow-y: auto">
-                  <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-
+                  <div class="Container">
                     <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                      <div style="max-height: 300px; overflow-y: auto">
-                      <button
-                      type="button"
-                      class="btn btn-outline-primary  mt-2 mb-4"
-                      onclick="genPDF()">
-                      Generar Pdf <i class="fas fa-file-pdf mx-1"></i>
-                    </button>
 
-                    <table class="table" id="tablaDetalleCompra">
-
-                      <thead>
-                        <tr>
-                          <th class="centrado">Proveedor</th>
-                          <th class="centrado">Comprador</th>
-                          <th></th>
-                          <th class="centrado">Fecha</th>
-                          <th class="centrado"></th>
-                          <th class="centrado"></th>
-                        </tr>
-                      </thead>
-
-                      <tbody>
-                        <tr>
-                          <td class="" id="ProveedorDetalle"></td>
-                          <td class="centrado" id="CompradorDetalle"></td>
-                          <td></td>
-                          <td class="centrado" id="FechaCompraDetalle"></td>
-                          <td></td><td></td>
-                        </tr>
-                      
-                        <thead>
-                          <tr>
-                            <th class="centrado">Producto</th>
-                            <th class="centrado">Cantidad Adquirida</th>
-                            <th class="centrado"></th>
-                            <th class="centrado">Precio Compra</th>
-                            <th class="centrado">Precio Venta</th>
-                            <th class="centrado">Sub Total</th>
-                          </tr>
-                        </thead>
-                      </tbody>
-
-                      <!-- //Productos -->
-                      <tbody>
-                      </tbody>
-
-                      <thead>
-                        <th></th><th></th><th></th><th></th><th></th>
-                        <th>Total</th>
-                      </thead>
-
-                      <tbody>
-                        <tr>
-                          <td></td><td></td><td></td><td ></td><td ></td>
-                          <td class="centrado" id="TotalCompraDetalle"></td>
-                        </tr>
-                      </tbody>
-                      
-                    </table>
-                    <button type="button" class="btn btn-danger" onclick="cerrarDetallesCompra()">Cerrar</button>
+                      <div class="Container">
+                        
+                        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                          <div style="max-height: 300px; overflow-y: auto">
+                            <button
+                            type="button"
+                            class="btn btn-outline-primary  mt-2 mb-4"
+                            onclick="genPDF()">
+                            Generar Pdf <i class="fas fa-file-pdf mx-1"></i>
+                            </button>
+      
+                            <table class="table" id="tablaDetalleCompra">
+      
+                              <thead>
+                                <tr>
+                                  <th class="centrado">Proveedor</th>
+                                  <th class="centrado">Comprador</th>
+                                  <th></th>
+                                  <th class="centrado">Fecha</th>
+                                  <th class="centrado"></th>
+                                  <th class="centrado"></th>
+                                </tr>
+                              </thead>
+      
+                              <tbody>
+                                <tr>
+                                  <td class="" id="ProveedorDetalle"></td>
+                                  <td class="centrado" id="CompradorDetalle"></td>
+                                  <td></td>
+                                  <td class="centrado" id="FechaCompraDetalle"></td>
+                                  <td></td><td></td>
+                                </tr>
+                              
+                                <thead>
+                                  <tr>
+                                    <th class="centrado">Producto</th>
+                                    <th class="centrado">Cantidad Adquirida</th>
+                                    <th class="centrado"></th>
+                                    <th class="centrado">Precio Compra</th>
+                                    <th class="centrado">Precio Venta</th>
+                                    <th class="centrado">Sub Total</th>
+                                  </tr>
+                                </thead>
+                              </tbody>
+      
+                             <!-- //Productos -->
+                              <tbody>
+                              </tbody>
+      
+                              <thead>
+                                <th></th><th></th><th></th><th></th><th></th>
+                                <th>Total</th>
+                              </thead>
+        
+                              <tbody>
+                                <tr>
+                                  <td></td><td></td><td></td><td ></td><td ></td>
+                                  <td class="centrado" id="TotalCompraDetalle"></td>
+                                </tr>
+                              </tbody>
+                            
+                            </table>
+                           <button type="button" class="btn btn-danger" onclick="cerrarDetallesCompra()">Cerrar</button>
+                        </div>
+                        </div>
+                      </div>
                   </div>
                 </div>
               </div>
             </div>
-            
+
             <div id="BuscarProveedorVenta"class="panel-flotante panel-ancho"style="display: none">
               <div class="panel-content">
                 <h4 id="Title_Compras">Buscar un proveedor</h4>
