--- a/public/css/style.css
+++ b/public/css/style.css
@@ -277,13 +277,7 @@ body{
   padding: 6px 14px;
   z-index: 99;
   transition: all 0.5s ease;
-  overflow-y: auto; /* Permitir scroll vertical */
-  direction: rtl; 
-  overflow-x: hidden;
-}
-
-.sidebar * {
-  direction: ltr; /* Revertir el texto al modo normal */
+  
 }
 
 ::-webkit-scrollbar {
@@ -371,6 +365,7 @@ body{
   white-space: nowrap;
   pointer-events: none;
   transition: 0s;
+  overflow: visible; /* Asegurar que los tooltips sean visibles */
 }
 .sidebar li:hover .tooltip{
   opacity: 1;
